--- a/insa-ms-esd--ml/acp-exemple-compression.Rmd
+++ b/insa-ms-esd--ml/acp-exemple-compression.Rmd
@@ -14,14 +14,12 @@ Le code est visible afin de reproduire l'exemple avec une autre photo.
 
 ## Image initiale
 
-Comme indiquée, l'image prise ici est simplement ma photo disponible sur la page [contact](../contact). La librairie `jpeg` permet d'importer et d'exporter des fichiers JPG, grâce entre autres à la fonction `readJPEG()`.
-
 ```{r import-jpeg}
 library(jpeg)
-fxj = readJPEG("../image_perso_FX.JPG")
+fxj = readJPEG("image_perso_FX.JPG")
 ```
 
-Il est possible d'afficher cette photo, grâce à la fonction `rasterImage()`. On retrouve bien l'image originale. Sa taille est non négligeable (`r format(object.size(fxj), "auto")`). On en profite pour créer une fonction qui sera utile par la suite pour afficher les images reconstruite.
+Comme indiquée, l'image prise ici est simplement ma photo disponible sur la page [contact](../contact). Sa taille est non négligeable (`r format(object.size(fxj), "auto")`). 
 
 ```{r affiche-jpeg}
 afficheJPEG = function(mat, titre = NULL) {
@@ -35,15 +33,13 @@ afficheJPEG(fxj, paste0("Originale (= ", format(object.size(fxj), "auto"), ")"))
 
 ## Découpage en rouge, vert et bleu
 
-Pour compresser cette image, nous allons découper celle-ci dans les trois composantes classiques d'une image : rouge, vert et bleu. Chaque pixel est représenté par une triplet de valeurs entre 0 et 1, représentant la quantité de chaque couleur de base à afficher.
+Pour compresser cette image, nous allons découper celle-ci dans les trois composantes classiques d'une image : rouge, vert et bleu. Chaque pixel est représenté par une triplet de valeurs entre 0 et 1, représentant la quantité de chaque couleur de base à afficher. Il est donc possible de représenter ces trois composantes d'une image séparément, tel que ci-dessous.
 
 ```{r decoupe-jpeg}
 fxj.r = fxj[,,1]
 fxj.g = fxj[,,2]
 fxj.b = fxj[,,3]
 ```
-
-Il est donc possible de représenter ces trois composantes d'une image séparément, tel que ci-dessous.
 
 ```{r affiche-rgb, fig.width=50, fig.height=10}
 par(mar = c(0, 0, 3, 0), mfrow = c(1, 3), cex.main = 5)
@@ -66,8 +62,6 @@ rasterImage(fxj.0, 0, 0, 1, 1)
 
 ## Compression via ACP
 
-La compression va utiliser une ACP sur chaque composante. Pour cela, nous calculons les valeurs de l'ACP pour chacune, que nous stockons dans une liste pour simplifier le travail par la suite.
-
 ```{r acp-rgb}
 acp.r = prcomp(fxj.r, center = FALSE)
 acp.g = prcomp(fxj.g, center = FALSE)
@@ -76,10 +70,6 @@ acp.b = prcomp(fxj.b, center = FALSE)
 acp = list(acp.r, acp.g, acp.b)
 ```
 
-On créée trois fonctions permettant, é partir d'un nombre d'axes passé en paramétre :
-- de calculer la taille des objets utilisés pour recréer l'image, 
-- de reconstruire l'image,
-- d'afficher l'image reconstruite.
 
 ```{r }
 tailleCOMP = function(nbaxes) {
@@ -103,7 +93,7 @@ afficheCOMP = function(nbaxes) {
 }
 ```
 
-Lorsque nous utilisons uniquement 1 axe, l'image reconstruite est bien évidemment assez loin de l'image de départ.
+La compression va utiliser une ACP sur chaque composante. Pour cela, nous calculons les valeurs de l'ACP pour chacune. Lorsque nous utilisons uniquement 1 axe, l'image reconstruite est bien évidemment assez loin de l'image de départ.
 
 ```{r}
 afficheCOMP(1)
@@ -135,7 +125,7 @@ afficheCOMP(320)
 
 ## Qualité de l'image reconstruite
 
-On peut aller plus  loin et calculer, pour chaque nombre d'axes, la distance entre l'image originale et l'image reconstruite, en sommant les écarts au carré par exemple. On voit clairement que la taille augmente linéairement par rapport aux nombre d'axes. Pour la différence par rapport é l'originale, on remarque que le gain de qualité se fait trés rapidement.
+On peut aller plus  loin et calculer, pour chaque nombre d'axes, la distance entre l'image originale et l'image reconstruite, en sommant les écarts au carré par exemple. On voit clairement que la taille augmente linéairement par rapport aux nombre d'axes. Pour la différence par rapport é l'originale, on remarque que le gain de qualité se fait très rapidement.
 
 ```{r difference}
 res = sapply(c(1:50, seq(60, 320, by = 20), 640), function(nbaxes) {
