--- a/tc-stats-probas/StatsProbas_TC2A_TD4.Rmd
+++ b/tc-stats-probas/StatsProbas_TC2A_TD4.Rmd
@@ -32,6 +32,8 @@ library(kableExtra)
 set.seed(1234)
 ```
 
+# Estimation
+
 ## Introduction
 
 **Comment puis-je connaître un indicateur sur la population française ?**
@@ -191,25 +193,175 @@ $$ p(c1 < X < c2 | \theta = \hat{\theta}) = 1 - \alpha $$
 - Pratique : prendre un risque $\alpha$ égal à 5 \%.
 
 
+## Cas de la loi Normale centrée-réduite
+
+Table de valeurs connues pour $P(X < u)$ (fonction de répartition) [Table complète](https://fr.wikipedia.org/wiki/Loi_normale#Tables_num%C3%A9riques_et_calculs)
+
+$\rightarrow$ Au croisement, on lit $P(X < 0,31) = 0.6217$ 
+
+```{r}
+m = matrix(pnorm(seq(0, 2.49, by = 0.01)), ncol = 10, byrow = TRUE)
+m = as.data.frame(m)
+colnames(m) = paste0("0,0", 0:9)
+rownames(m) = sub("\\.", ",", as.character(seq(0, 2.4, by = .1)))
+kable(m, digits = 4, escape = F) %>%
+  kable_styling(font_size = 6) %>%
+  column_spec(3, bold = T, background = "lightgray") %>%
+  row_spec(4, bold = T, background = "lightgray")
+```
+
+
+## Quelques valeurs à connaître
+
+- $P(X < 1.64) = 0.9494974 = \sim 0.95$
+  - Si $X$ suit une loi Normale centrée réduite, il y a 95% de chance que sa valeur soit inférieur à 1.64
+- $P(X < 1.96) = 0.9750$
+  - Si $X$ suit une loi Normale centrée réduite, il y a 97.5% de chance que sa valeur soit inférieur à 1.96
+  
+Et pour les valeurs négatives ? On se base sur la symétrie de la loi Normale.
+
+- $P(X < -1.64) = P(X > 1.64) = 1 - P(X < 1.64) = \sim 0.95$
+- $P(X < -1.96) = P(X > 1.96) = 1 - P(X < 1.96) = \sim 0.975$
+
+### Conclusion
+Pour une variable $X$ suivant une loi Normale centrée-réduite, on a donc 5% de chances que sa valeur soit comprise dans l'intervalle $[-1.96; 1.96]$.
+
 ## Intervalle de confiance d'une moyenne
 
 ### Si $\sigma$ est connu
-On a l'intervalle de confiance suivant (dans le cas très courant d'un intervalle symétrique) :
+On a l'intervalle de confiance suivant :
 $$ \hat\mu - u_{\alpha/2} \frac{\sigma}{\sqrt{n}} < \mu < \hat\mu + u_{\alpha/2} \frac{\sigma}{\sqrt{n}} $$
 où $u_{\alpha/2}$ est la valeur de la table de la loi normale pour laquelle $p(X > u_{\alpha/2}) = \frac{\alpha}{2}$. Puisqu'on choisit souvent $\alpha = 5\%$, on a $u_{\alpha/2} = 1.96$. 
 
 ### Si $\sigma$ n'est pas connu
 On utilise ici l'intervalle de confiance suivant ($t_{\alpha/2}$ est la valeur de la table de la loi de Student pour laquelle $p(X > u_{\alpha/2}) = \frac{\alpha}{2}$) :
-$$ \hat{m} - t_{\alpha/2} \frac{\hat{\sigma}}{\sqrt{n-1}} < m < \hat{m} + t_{\alpha/2} \frac{\hat{\sigma}}{\sqrt{n-1}} $$
+$$ \hat{m} - t_{\alpha/2} \frac{\hat{\sigma}}{\sqrt{n}} < m < \hat{m} + t_{\alpha/2} \frac{\hat{\sigma}}{\sqrt{n}} $$
 Si $n$ est grand, on retrouve la valeur 1.96 pour $t_{\alpha/2}$ avec $\alpha = 5\%$.
 
 
-## Intervalle de confiance d'un pourcentage
+## Intervalle de confiance d'une proportion
 
-On se base sur le fait que si $n$ est grand, alors la variable alétoire du pourcentage suit approximativement une loi normale. On obtient donc l'intervalle suivant
+On se base sur le fait que si $n$ est grand, alors la variable aléatoire de la proportion suit approximativement une loi normale. On obtient donc l'intervalle suivant
 $$ \hat{p} - u_{\alpha/2} \sqrt{\frac{\hat{p}(1-\hat{p})}{n}} < X < \hat{p} + u_{\alpha/2} \sqrt{\frac{\hat{p}(1-\hat{p})}{n}} $$
 On a toujours $u_{\alpha/2} = 1.96$ pour $\alpha = 5\%$.
 
 
+## Exemple d'estimations
+
+- On a mesuré le niveau de pluie pendant 9 ans, et on a obtenu les valeurs suivantes :
+  - $\bar{x} = 610.2222$ et $s = 111.5289$
+
+- $X$ : niveau de pluie de la région
+  - Suit une loi Normale $N(\mu, \sigma)$
+
+- Estimation de la moyenne $\mu$ par $\bar{x} = 610.2222$
+- Estimation par intervalle de confiance à 5% : $[537.3567; 683.0877]$
+
+# Tests statistiques
+
+## Notions générales sur les tests statistiques
+
+- Idée : niveau de pluie en augmentation
+- Niveau de pluie suit une loi $N(600, 100)$ (étude précédente)
+- Mesure du niveau de pluie pendant 9 ans
+  - $\bar{x} = 610.2222$ et $s = 111.5289$
+- Que peut-on conclure ?
+- Opposer deux hypothèses contradictoires :
+  - [$H_0$] le niveau de pluie n'a pas augmenté, donc $\mu = 600$
+  - [$H_1$] le niveau de pluie a augmenté, donc $\mu > 600$.
+- Choix d'une règle de décision
 
 
+## Notions générales sur les tests statistiques
+
+> Comment tester ces hypothèses ? 
+
+- Intérêt naturel porté à $\hat\mu$, moyenne des observations, et donc estimation du niveau de pluie
+- Variable considérée comme la **variable de décision**
+- Si $H_0$ vrai, $\hat\mu$ suit une loi $N(600, \frac{100}{\sqrt{9}})$
+
+### Règle de décision
+- Si $\hat\mu$ est trop grand, choix de l'hypothèse $H_1$
+  - Donc si $p(\hat\mu > k) = 0.05$
+  - 5% de chance de se tromper
+- Sinon, conservation de  $H_0$
+
+## Notions générales sur les tests statistiques
+
+- Test avec $k = 600 + \frac{100}{\sqrt{9}} \times 1.64 = 655$
+  - Si $\hat\mu > 655$, alors on rejette $H_0$ pour conserver $H_1$
+  - Si $\hat\mu \leq 655$, alors on conserve $H_0$
+
+### Ensemble des évènements 
+- $\{\hat\mu > 655\}$ : **région critique** ou région de rejet
+- $\{\hat\mu \leq 655\}$ : **région d'acceptation**
+
+### Sur les données
+$\hat\mu = 610.2$
+
+$\rightarrow$ Conservation de $H_0$ (pas d'augmentation du niveau de pluie)
+
+
+## Notions générales sur les tests statistiques
+
+- Mais il existe une possibilité de se tromper
+  - Croire le chercheur alors qu'il avait tort
+  - Ne pas croire ce chercheur alors qu'il avait raison
+
+- Test présentant une forte probabilité d'être inexact
+- Si augmentation de la pluie, le niveau suit une loi $N(650,\frac{100}{\sqrt 9})$
+
+### Erreur commise quand $\hat\mu$ inférieur à 655
+- Probabilité $\beta = p(\hat\mu < 655)$
+- $u = \frac{\hat\mu - 650}{100 / \sqrt 9}$ suit une loi $N(0,1)$
+- $\beta = p(u < \frac{655 - 650}{100 / \sqrt 9}) = p(u < 0.15)$
+- $\beta = 0.56$, ce qui est effectivement considérable
+
+## Notions générales sur les tests statistiques
+
+- Deux probabilités d'erreur
+  - $\alpha$ : risque de première espèce
+  - $\beta$  :  risque de seconde espèce
+
+| | $H_0$ vraie | $H_1$ vraie |
+|-|-|-|
+| Choix $H_0$    | $1 - \alpha$ | $\beta$ |
+| Choix $H_1$    | $\alpha$ | $1 - \beta$ |
+
+- Dans la pratique, plus d'importance à l'hypothèse nulle
+- Calcul de $\beta$ souvent impossible
+- $1 - \beta$ est appelé **puissance du test**
+- Choix des probabilités d'erreur $\alpha$ de 5\%, 1\% ou 10\%
+
+
+## Notions générales sur les tests statistiques
+
+### Pour effectuer un test, voici les étapes à suivre
+1. \'Etablir deux hypothèses contradictoires, 
+1. Déterminer la variable de décision,
+1. Calculer la région critique en fonction de $\alpha$,
+1. Calculer si possible la puissance $1 - \beta$,
+1. Calculer la valeur expérimentale de la variable de décision,
+1. Conclure : rejet ou acceptation de $H_0$.
+
+### Types de test
+- Unilatéral : on cherche à tester si une variable a une moyenne supérieure (ou inférieure) à une certaine valeur
+  - risque sur un seul côté
+- Bilatéral : on cherche à tester  si une variable a une moyenne égale à une certaine valeur
+  - risque des deux côtés
+
+## Exemple de test
+
+- Niveau de pluie suit une loi $N(600, 100)$ (étude précédente)
+- Est-ce toujours le même ?
+
+- On a mesuré le niveau de pluie pendant 9 ans, et on a obtenu les valeurs suivantes :
+  - $\bar{x} = 610.2222$ et $s = 111.5289$
+  - Intervalle de confiance à 5% : $[537.3567; 683.0877]$
+
+- Hypothèses
+  - [$H_0$] : le niveau n'a pas changé
+  - [$H_1$] : le niveau a changé
+- Région critique : en dehors de l'intervalle de confiance
+
+$\rightarrow$ Conservation de $H_0$ (pas de changement du niveau de pluie)
