insa classif demande2 update

--- a/insa-ms-esd--ml/classif-demande2-correction.ipynb
+++ b/insa-ms-esd--ml/classif-demande2-correction.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spotify"
+    "# Spotify\n",
+    "\n",
+    "Données disponibles directement [ici](spotify_dataset.csv)"
    ]
   },
   {
