--- a/lp-iot--python-ds/tpnote-sujet.ipynb
+++ b/lp-iot--python-ds/tpnote-sujet.ipynb
@@ -11,11 +11,9 @@
    "source": [
     "# TP noté\n",
     "\n",
-    "Rendu par mail à l'adresse <francois-xavier.jollois@u-paris.fr> \n",
+    "Déposer le fichier `.ipynb` produit (attention à indiquer votre nom de famille dans le nom de fichier) dans ce dépôt :\n",
     "\n",
-    "- Objet : [LP IoT] TP noté - NOM ($\\rightarrow$ votre nom à mettre)\n",
-    "- Sujet : un petit bonjour ne fait pas de mal\n",
-    "- Pièce jointe : le fichier .ipynb à télécharger en cliquant sur File -> Download as -> Notebook (.ipynb)\n",
+    "<https://cloud.parisdescartes.fr/index.php/s/TxAkNgKf9a3SxkD>\n",
     "\n",
     "**Délai** : A rendre avant la fin du TP le jour même\n",
     "\n",
@@ -304,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
